mido: dts: fix IR gpio node
This commit reflects change to pmi8950_gpios node made in commit b8efabab.
Thanks to @adislice for finding cause of IR breakage in ulysse tree.

See-Also: https://github.com/xiaomi-ulysse-wip/kernel_msm-4.9/commit/16b25c733395419c26a7ab0cf648b1d197a31d71
Signed-off-by: Yuri Konotopov <ykonotopov@gnome.org>

--- a/arch/arm64/boot/dts/qcom/mido/msm8953-general-mido.dtsi
+++ b/arch/arm64/boot/dts/qcom/mido/msm8953-general-mido.dtsi
@@ -10,6 +10,8 @@
  * GNU General Public License for more details.
  */
 
+#include <dt-bindings/pinctrl/qcom,pmic-gpio.h>
+
 / {
 	qrd_batterydata: qcom,battery-data {
 		qcom,batt-id-range-pct = <5>;
@@ -113,7 +115,7 @@
 				output-low;
 				bias-pull-down;
 				function = "func1";
-				qcom,drive-strength = <2>;
+				qcom,drive-strength = <PMIC_GPIO_STRENGTH_MED>;
 			};
 		};
 
